# monorepo_dummy

./: README.md  clearml.conf
libs/utils-1/: pyproject.toml
libs/utils-1/src/utils_1/: my_module_1.py
libs/utils-2/: pyproject.toml
libs/utils-2/src/utils_2/: my_module_2.py
service/clearml-pipeline/: pyproject.toml
service/clearml-pipeline/src/clearml_pipeline/: clearml_task.py
