[tool.poetry]
name = "utils-1"
version = "0.1.0"
description = ""
authors = ["fedevallucci <federico.vallucci@novisto.com>"]
readme = "README.md"
packages = [{include = "utils_1", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
