[tool.poetry]
name = "utils-2"
version = "0.1.0"
description = ""
authors = ["fedevallucci <federico.vallucci@novisto.com>"]
readme = "README.md"
packages = [{include = "utils_2", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
