[tool.poetry]
name = "clearml-pipeline"
version = "0.1.0"
description = ""
authors = ["fedevallucci <federico.vallucci@novisto.com>"]
readme = "README.md"
packages = [{include = "clearml_pipeline", from = "src"}]

[tool.poetry.dependencies]
python = "3.10.*"
clearml = "^1.11.0"
utils-1 = {git = "https://github.com/federicovallucci/monorepo_dummy.git", rev = "main", subdirectory = "libs/utils-1"}
utils-2 = {git = "https://github.com/federicovallucci/monorepo_dummy.git", rev = "main", subdirectory = "libs/utils-2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
